# algotrader-community

./: .gitignore  COMMUNITY_EDITION.md  Cargo.toml  DATA_UNIVERSE.md  LICENSE  README.md  SUPPORT.md
.github/: FUNDING.yml
examples/: sample_market.csv
src/: config.rs  engine.rs  lib.rs  main.rs  market.rs  report.rs  strategy.rs
