[package]
name = "algotrader_community"
version = "0.1.0"
edition = "2021"
description = "AlgoTrader Community Edition: paper/backtest-only trading framework"
license = "MIT"
repository = "https://github.com/sheawinkler/algotrader-community"
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
